--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>lianyc</title>
+    <script type="text/javascript" color="0,0,255" opacity='0.7' zIndex="-2" count="200" src="src/canvas-nest.js"></script>
 </head>
 <body>
 <div id="container">
-    <div id="ground"></div>
-    <div id="gameControl">
-        <div id="button">
-            <button id="start">开始</button>
-            <button id="pause">暂停</button>
-        </div>
-    </div>
+
 </div>
 </body>
-
 </html>
