--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>lianyc</title>
-    <script type="text/javascript" color="0,0,255" opacity='0.7' zIndex="-2" count="200" src="src/canvas-nest.js"></script>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>canvas-nest.js</title>
 </head>
 <body>
-<div id="container">
-
-</div>
+<script type="text/javascript" color="0,0,255" opacity='0.7' zIndex="-2" count="200" src="src/canvas-nest.js"></script>
 </body>
 </html>
