--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>canvas-nest.js</title>
+    <title>my blog</title>
 </head>
 <body>
-<script type="text/javascript" color="0,0,255" opacity='0.7' zIndex="-2" count="200" src="src/canvas-nest.js"></script>
+<script type="text/javascript" color="0,0,0,1" opacity='0.7' zIndex="-2" src="src/canvas-background.js"></script>
 </body>
 </html>
