--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>my blog</title>
 </head>
 <body>
-<script type="text/javascript" color="0,0,0,1" opacity='0.7' zIndex="-2" src="src/canvas-background.js"></script>
-<!--     <EMBED style=" margin: 5px auto; width:900px; height: 400px";
+<!-- <script type="text/javascript" color="0,0,0,1" opacity='0.7' zIndex="-2" src="src/canvas-background.js"></script> -->
+    <EMBED style=" margin: 5px auto; width:900px; height: 400px";
        src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_wh.swf"
        quality= "high"
        wmode="transparent"
        pluginspage="http://www.macromedia.com/go/getflashplayer"
-       type="application/x-shockwave-flash"> -->
+       type="application/x-shockwave-flash">
 </body>
 </html>
